--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "nanoid": "^3.1.22",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-file-base64": "^1.0.3",
     "react-icons": "^4.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
