--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -16,5 +15,7 @@
     "dotenv": "^8.2.0",
     "mongoose": "^5.12.3",
     "nodemon": "^2.0.7"
-  }
+  },
+  "devDependencies": {},
+  "description": "coloradofreeple"
 }
