Fix bug in Login Page

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
 CONNECTION_URL = mongodb+srv://meanJosephBean:pe@chyPup79@cluster0.tnrqb.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+
+SECRET = quality_guaranteed
